# exercise-checker

./: .gitignore  README.md  Trial1.ipynb
Checker/: Trial1.ipynb  pyproject.toml
Checker/.ipynb_checkpoints/: grading-checkpoint.py
Checker/src/: gumble_example.py
development/: 00.ipynb  01.ipynb
exercise_checker/: check.py  gumble_example.py
tests/: ckeck_test.ipynb  message_test.ipynb
